# cmdq

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-crate.yml  release.yml
docs/: walkthrough.html
shell/: integration.bash  integration.fish  integration.zsh
src/: app.rs  cursor_tracker.rs  input.rs  lib.rs  main.rs  mode_detect.rs  osc133.rs  panel.rs  paths.rs  pty.rs  queue.rs  session_lease.rs  shell_integration.rs  ui.rs
tests/: binary_smoke.rs  integration_pty.rs  path_a_smoke.rs  queue_dispatch_e2e.rs
