[package]
name = "cmdq"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A PTY-hosted command queue: type the next command while one is still running."
license = "MIT"
authors = ["Parth Jadhav"]
repository = "https://github.com/ParthJadhav/cmdq"
homepage = "https://github.com/ParthJadhav/cmdq"
documentation = "https://docs.rs/cmdq"
readme = "README.md"
keywords = ["terminal", "tui", "pty", "shell", "queue"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [
    "/.github",
    "/docs",
    "/target",
    "/tests/snapshots",
    "*.html",
]

[dependencies]
portable-pty = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
vt100 = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
signal-hook = "0.4"
nix = { version = "0.31", features = ["signal", "term"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lib]
name = "cmdq"
path = "src/lib.rs"

[[bin]]
name = "cmdq"
path = "src/main.rs"
