[package]
name = "cmdq"
version = "0.1.3"
edition = "2024"
rust-version = "1.88"
description = "A PTY-hosted command queue: type the next command while one is still running."
license = "MIT"
authors = ["Parth Jadhav"]
repository = "https://github.com/ParthJadhav/cmdq"
homepage = "https://github.com/ParthJadhav/cmdq"
documentation = "https://docs.rs/cmdq"
readme = "README.md"
keywords = ["terminal", "tui", "pty", "shell", "queue"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [
    "/.github",
    "/docs",
    "/target",
    "/tests/snapshots",
    ".DS_Store",
    "Cargo.toml.orig",
    "*.orig",
    "*.html",
]

[dependencies]
portable-pty = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
unicode-width = "0.2"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lib]
name = "cmdq"
path = "src/lib.rs"

[[bin]]
name = "cmdq"
path = "src/main.rs"
